--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -28,5 +28,6 @@
 <!-- Support for MatJax -->
 <!--script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script-->
 <!--script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script-->
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <!-- end custom head snippets -->
