--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,6 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css" media=print>
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css" media="print">
 
 <meta http-equiv="cleartype" content="on">
