--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css" media="print">
+<link rel="preload" href="{{ base_path }}/assets/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="main.css"></noscript>
 
 <meta http-equiv="cleartype" content="on">
