fix extension on main.scss
  * add a prefix `s` to file extension
  for correct search and link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="preload" href="{{ base_path }}/assets/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="main.css"></noscript>
-
+<!--link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"-->
+<link rel="preload" href="{{ base_path }}/assets/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="main.scss"></noscript>
 <meta http-equiv="cleartype" content="on">
