--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -22,9 +22,12 @@
 <meta name="msapplication-TileImage" content="{{ base_path }}/images/mstile-144x144.png?v=M44lzPylqQ">
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml?v=M44lzPylqQ">
 <meta name="theme-color" content="#ffffff">
+
+<link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css" >
+<!--
 <link rel="preload" href="{{ base_path }}/assets/css/academicons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="academicons.css"></noscript>
-
+-->
 
 <!-- Support for MatJax -->
 <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
