--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,6 @@
 
 <!-- For all browsers -->
 <!--link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"-->
-<link rel="preload" href="{{ base_path }}/assets/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="{{ base_path }}/assets/css/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="main.scss"></noscript>
 <meta http-equiv="cleartype" content="on">
