--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,5 @@
 <!-- For all browsers -->
 <!--link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"-->
 <link rel="preload" href="{{ base_path }}/assets/css/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="main.scss"></noscript>
+<noscript><link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"></noscript>
 <meta http-equiv="cleartype" content="on">
