switch to blocking scss file test

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss">
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss" as="style">
 <!--
 <link rel="preload" href="{{ base_path }}/assets/css/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"></noscript>
