--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,8 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss" as="style">
-<!--
-<link rel="preload" href="{{ base_path }}/assets/css/main.scss" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="{{ base_path }}/assets/css/main.scss"></noscript>
--->
+<!--link rel="stylesheet" href="{{ base_path }}/assets/css/main.css" as="style"-->
+
+<link rel="preload" href="{{ base_path }}/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="{{ base_path }}/assets/css/main.css"></noscript>
 <meta http-equiv="cleartype" content="on">
